--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: IvyOxBridgeBound # your name (or website title) here
+logo: "/images/logo_v1.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  College Counseling 
   <br><br>
-  Second description 
+  Educational Advising 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
+github:
+ is_user_page: false
+ is_project_page: false
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
