--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Educational Advising 
   <br><br>
   
-theme: false
++ theme: false
 github:
  is_user_page: false
  is_project_page: false
